--- a/src/graph_preprocess.ipynb
+++ b/src/graph_preprocess.ipynb
@@ -13,9 +13,9 @@
     "from pathlib import Path\n",
     "from torch_geometric.data import Data\n",
     "\n",
-    "path1 = Path('../../../czl/TwiBot22-baselines/datasets/Twibot-20')\n",
-    "path2 = Path('../../../czl/TwiBot22-baselines/data')\n",
-    "path3 = Path('../../../czl/TwiBot22-baselines/src')\n",
+    "path1 = Path('datasets/Twibot-20')\n",
+    "path2 = Path('data')\n",
+    "path3 = Path('src')\n",
     "\n",
     "edge = pd.read_csv(path1 / 'edge.csv')\n",
     "\n",
