--- a/src/text_preprocess.ipynb
+++ b/src/text_preprocess.ipynb
@@ -12,9 +12,9 @@
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "\n",
-    "path1 = Path('../../../czl/TwiBot22-baselines/datasets/Twibot-20')\n",
-    "path2 = Path('../../../czl/TwiBot22-baselines/data')\n",
-    "path3 = Path('../../../czl/TwiBot22-baselines/src')\n"
+    "path1 = Path('datasets/Twibot-20')\n",
+    "path2 = Path('data')\n",
+    "path3 = Path('src')\n"
    ]
   },
   {
@@ -115,7 +115,7 @@
     "\"\"\"\n",
     "des_vector = torch.load(path2 / 'des_tensor.pt')\n",
     "names_vector = torch.load('data/names_vector.pt')\n",
-    "users_tweets = np.load(path3 / 'T5/Twibot-20/data/user_tweets_dict.npy', allow_pickle=True).tolist()\n"
+    "users_tweets = np.load(path3 / 'data/user_tweets_dict.npy', allow_pickle=True).tolist()\n"
    ]
   },
   {
